push file ngay 30/4/24

--- a/cv/src/main/resources/application.properties
+++ b/cv/src/main/resources/application.properties
@@ -11,4 +11,6 @@ server.port=8081
 #spring.mvc.contentnegotiation.media-types.form-urlencoded=application/x-www-form-urlencoded
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
-spring.mvc.static-path-pattern=/**
+#spring.mvc.static-path-pattern=/static/**
+#spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/
