--- a/cv/pom.xml
+++ b/cv/pom.xml
@@ -96,6 +96,29 @@
 
 	<build>
 		<plugins>
+<!--			<plugin>-->
+<!--				<groupId>org.codehaus.mojo</groupId>-->
+<!--				<artifactId>exec-maven-plugin</artifactId>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>run-tailwindcss</id>-->
+<!--						<phase>generate-resources</phase>-->
+<!--						<goals>-->
+<!--							<goal>exec</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<executable>npx</executable>-->
+<!--							<arguments>-->
+<!--								<argument>tailwindcss</argument>-->
+<!--								<argument>build</argument>-->
+<!--								<argument>src/main/resources/static/css/tailwind.css</argument>-->
+<!--								<argument>-o</argument>-->
+<!--								<argument>src/main/resources/static/css/output.css</argument>-->
+<!--							</arguments>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
