20/5 them view quan ly cho admin

--- a/cv/src/main/resources/application.properties
+++ b/cv/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.mvc.view.suffix=.html
 spring.mvc.view.prefix=classpath:/templates/
 server.port=8081
-#spring.mvc.contentnegotiation.media-types.form-urlencoded=application/x-www-form-urlencoded
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
-spring.mvc.static-path-pattern=/**
-#spring.web.resources.static-locations=classpath:/static/
-#spring.web.resources.static-locations=classpath:/static/
+# spring.mvc.static-path-pattern=/**
+spring.mvc.static-path-pattern=/static/**
+spring.servlet.multipart.max-file-size=10MB
+# spring.web.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/resources/,classpath:/META-INF/resources/
+
